fix accordion of categories on ie6

--- a/public/stylesheets/blognog2.css
+++ b/public/stylesheets/blognog2.css
@@ -566,6 +566,7 @@ ul{
 }
 div.accordion {
 	position: relative; /* required for bounding */
+  margin: 15px 0 0 0;
 }
 
 .accordion-toggle{
